CCD-8234: Fixed checkstyle